<resources>
    <string name="app_name">SmartPark</string>
    <string name="login_label">Login</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="email_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="login_button_label">Login</string>
    <string name="registration_hint">Registration</string>
    <string name="brand_hint">Brand(e.g. Hyundai)</string>
    <string name="model_hint">Model(e.g. Kona)</string>
    <string name="colour_hint">Colour</string>
    <string name="addVehicle_label">Add Vehicle</string>
    <string name="add_vehicle_button_label">Add Vehicle</string>
    <string name="registerDriver_label">Register Driver</string>
    <string name="phone_hint">Phone Number</string>
    <string name="lName_hint">Last Name</string>
    <string name="fName_hint">First Name</string>
    <string name="add_driver_button_label">Register</string>
    <string name="password_confirm_hint">Confirm Password</string>
    <string name="register_button_label">Register</string>
    <string name="update_driver">Update Driver</string>
</resources>