<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/vehicleFormTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addVehicle_label"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/registrationEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/registration_hint"
        android:inputType="text"
        android:textColorHint="#8A8A8A"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/brandEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/brand_hint"
        android:textColorHint="#8A8A8A"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/modelEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/model_hint"
        android:inputType="text"
        android:textColorHint="#8A8A8A"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/colourEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/colour_hint"
        android:textColorHint="#8A8A8A"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/vehicleFormButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_vehicle_button_label"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"
        android:onClick="add_vehicle"
        android:background="@color/design_default_color_primary"
        android:textColor="#fff"/>

</LinearLayout>
