<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/vehicleFormTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerDriver_label"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/firstNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/fName_hint"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#8A8A8A"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/lastNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/lName_hint"
        android:minHeight="48dp"
        android:textColorHint="#8A8A8A"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/email_hint"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#8A8A8A"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/phone_hint"
        android:minHeight="48dp"
        android:textColorHint="#8A8A8A"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/password_hint"
        android:minHeight="48dp"
        android:textColorHint="#8A8A8A"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/passConfirmEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/password_confirm_hint"
        android:minHeight="48dp"
        android:textColorHint="#8A8A8A"
        android:textSize="16sp" />

    <Button
        android:id="@+id/driverFormButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_driver_button_label"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"
        android:background="@color/design_default_color_primary"
        android:textColor="#fff"/>

</LinearLayout>

<com.google.android.material.navigation.NavigationView
android:id="@+id/navigation_view"
android:layout_width="wrap_content"
android:layout_height="match_parent"
android:layout_gravity="start"
app:menu="@menu/main_menu"/>
    </androidx.drawerlayout.widget.DrawerLayout>