<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/driverFormTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Update Driver Information"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/fNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fName_hint"
            android:inputType="text"
            android:textColorHint="#8A8A8A"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/lNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lName_hint"
            android:inputType="text"
            android:textColorHint="#8A8A8A"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/emailAddressEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:textColorHint="#8A8A8A"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/phoneNumberEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_hint"
            android:textColorHint="#8A8A8A"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/updateDriverFormButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_driver"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"
            android:background="@color/design_default_color_primary"
            android:textColor="#fff"/>

    </LinearLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/main_menu"/>
</androidx.drawerlayout.widget.DrawerLayout>